#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#
AC_PREREQ(2.61)
AC_INIT(picohttpparser, scm)
AM_INIT_AUTOMAKE([foreign no-dist no-installinfo no-installman -Wall])
AC_CONFIG_HEADER([src/config.h])
AC_CONFIG_MACRO_DIR([m4])

#
# Checks for programs.
#
AC_LANG_C
AC_PROG_CC

#
# define luarocks variables
#
AC_SUBST([LIBFLAG], ["$LIBFLAG"])
AC_SUBST([OBJ_EXTENSION], ["$OBJ_EXTENSION"])
AC_SUBST([LIB_EXTENSION], ["$LIB_EXTENSION"])
AC_SUBST([LIBDIR], ["$LIBDIR"])

#
# checking required headers
#
AC_CHECK_HEADERS(
    stdlib.h unistd.h string.h errno.h stdint.h time.h,,
    AC_MSG_FAILURE([required header not found])
)

#
# checking required types
#
AC_CHECK_TYPES([ uint8_t, size_t ])

#
# checking required functions
#
AC_CHECK_FUNCS(
    [ calloc free ],,
    AC_MSG_FAILURE([required function not found])
)


AC_CONFIG_FILES([ \
    Makefile \
    src/Makefile \
])
AC_OUTPUT
